--- a/MyApplication/app/src/main/res/layout/activity_main.xml
+++ b/MyApplication/app/src/main/res/layout/activity_main.xml
@@ -27,6 +27,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:ems="10"
+        android:backgroundTint="@color/colorGray"
         android:inputType="textMultiLine"/>
 
 
