--- a/MyApplication/app/src/main/res/layout/activity_main.xml
+++ b/MyApplication/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,14 @@
     android:orientation="vertical"
     tools:context="droid.vsb.ms.rmatu.mqttclient.MainActivity">
 
+    <Switch
+        android:id="@+id/switchConnect"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_marginRight="5dp"
+        android:text="Connect" />
+
     <EditText
         android:id="@+id/etTopic"
         android:layout_width="wrap_content"
