--- a/MyApplication/app/src/main/res/layout/activity_main.xml
+++ b/MyApplication/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,7 @@
         android:layout_height="wrap_content"
         app:tabGravity="fill"
         app:tabMode="fixed"
+        app:tabTextColor="@color/colorWhite"
         android:background="@color/colorPrimary"/>
 
     <android.support.v4.view.ViewPager
