--- a/MyApplication/app/src/main/res/values/colors.xml
+++ b/MyApplication/app/src/main/res/values/colors.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#2178C0</color>
+    <color name="colorPrimaryDark">#003e85</color>
+    <color name="colorAccent">#5fa73c</color>
     <color name="colorGray">#b6b0b2</color>
+    <color name="colorWhite">#FFFFFF</color>
 </resources>
