--- a/MyApplication/app/src/main/res/layout/activity_main.xml
+++ b/MyApplication/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
         app:tabGravity="fill"
         app:tabMode="fixed"
         app:tabTextColor="@color/colorWhite"
-        android:background="@color/colorPrimary"/>
+        android:background="@color/colorBlue"/>
 
     <android.support.v4.view.ViewPager
         android:id="@+id/viewPager"
