--- a/MyApplication/app/src/main/res/layout/message_list_item.xml
+++ b/MyApplication/app/src/main/res/layout/message_list_item.xml
@@ -1,40 +1,57 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="?android:attr/listPreferredItemHeight"
-    android:padding="6dip" >
+<?xml version="1.0" encoding="utf-8"?>
+<android.support.v7.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginLeft="5dp"
+    android:layout_marginRight="5dp"
+    android:layout_marginTop="5dp"
+    android:backgroundTint="@color/colorBlueLight"
+    card_view:cardCornerRadius="5dp">
 
-    <TextView
-        android:id="@+id/message_topic_text"
-        android:layout_width="fill_parent"
-        android:layout_height="26dip"
-        android:ellipsize="marquee"
-        android:text="Topic"
-        android:textSize="12sp"
-        android:layout_below="@+id/message_text"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:maxLines="1" />
-
-    <TextView
-        android:id="@+id/message_text"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignWithParentIfMissing="true"
-        android:gravity="center_vertical"
-        android:text="xxxxxxxxxx"
-        android:textSize="16sp" />
-
-    <TextView
-        android:layout_width="100dip"
-        android:layout_height="26dip"
-        android:text="Time"
-        android:id="@+id/message_date_text"
-        android:textSize="12sp"
-        android:layout_below="@+id/message_text"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="5dp">
 
 
-</RelativeLayout>
+        <TextView
+            android:id="@+id/message_text"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true"
+            android:layout_alignWithParentIfMissing="true"
+            android:gravity="center_vertical"
+            android:text=""
+            android:textSize="14sp" />
+
+        <TextView
+            android:id="@+id/message_topic_text"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:ellipsize="marquee"
+            android:text="Topic"
+            android:textSize="10sp"
+            android:textStyle="bold"
+            android:layout_below="@+id/message_text"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:maxLines="1" />
+
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Time"
+            android:id="@+id/message_date_text"
+            android:textSize="12sp"
+            android:layout_below="@+id/message_text"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true" />
+
+
+    </RelativeLayout>
+
+</android.support.v7.widget.CardView>
