--- a/MyApplication/app/src/main/res/values/colors.xml
+++ b/MyApplication/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">#5fa73c</color>
     <color name="colorGray">#b6b0b2</color>
     <color name="colorWhite">#FFFFFF</color>
+    <color name="colorBlueLight">#cef9ee</color>
+    <color name="colorBlue">#60d2ff</color>
 </resources>
