--- a/MyApplication/app/src/main/res/layout/setup_fragment.xml
+++ b/MyApplication/app/src/main/res/layout/setup_fragment.xml
@@ -4,6 +4,27 @@
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp">
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:text="Identity:"/>
+
+        <EditText
+            android:id="@+id/etIdentity"
+            android:layout_width="0dp"
+            android:layout_weight="3"
+            android:layout_height="wrap_content"
+            android:hint="Identity"
+            android:text="MAT092"
+            />
+
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
