--- a/MyApplication/app/src/main/res/layout/setup_fragment.xml
+++ b/MyApplication/app/src/main/res/layout/setup_fragment.xml
@@ -74,7 +74,7 @@
         <EditText
             android:id="@+id/etTopic"
             android:layout_width="0dp"
-            android:layout_weight="4"
+            android:layout_weight="6"
             android:layout_height="wrap_content"
             android:text="/mschat/all/#"
             android:hint="Topic"
@@ -87,6 +87,14 @@
             android:layout_weight="2"
             android:layout_height="wrap_content"
             android:text="@string/btnSubscribe"
+            />
+
+        <Button
+            android:id="@+id/btnUnSubscribe"
+            android:layout_width="0dp"
+            android:layout_weight="3"
+            android:layout_height="wrap_content"
+            android:text="@string/btnUnSubscribe"
             />
 
     </LinearLayout>
