--- a/MyApplication/app/src/main/res/layout/message_fragment.xml
+++ b/MyApplication/app/src/main/res/layout/message_fragment.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
@@ -10,4 +9,12 @@
         android:id="@+id/message_list"
         android:choiceMode="singleChoice"/>
 
-</LinearLayout>
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab_clear"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:src="@drawable/trash"
+        android:layout_gravity="bottom|right"
+        android:layout_margin="16dp"/>
+
+</FrameLayout>
