--- a/MyApplication/app/src/main/res/layout/setup_fragment.xml
+++ b/MyApplication/app/src/main/res/layout/setup_fragment.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+<LinearLayout
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
@@ -151,7 +155,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="bottom"
-        android:layout_marginBottom="10dp"
+        android:layout_marginTop="100dp"
         android:gravity="bottom"
         android:orientation="vertical">
 
@@ -177,3 +181,4 @@
     </LinearLayout>
 
 </LinearLayout>
+</ScrollView>
